package lesson3.dip;public class ReportItem {
}
