package lesson3.dip;

import java.util.List;

public interface Reportable {
    void output(List<ReportItem> items);
}
